# exodos

./: .gitignore  .merlin  .travis.yml  Makefile  _tags  ag_util.ml  calendar.ml  client.ml  client_google.ml  client_irail.ml  client_stib.ml  combi.fr.md  dune  google.atd  google.json  google.ml  google.mli  handlers.yaml  http.ml  http.mli  irail.atd  irail.ml  irail_calendar.ml  liveboard.json  liveboard.url  opam  option.ml  path  path_retro  point.ml  point.mli  routeserver.atd  routeserver.ml  routeserver.mli  routeserver_calendar.ml  shortest.n4j  station.url  stib.atd  stib.ml  stib.mli  (+5 more)
old/: binheap.py  dist.url  graph.py  stations.json  vehicle.json  vehicle.url
vanilla_dijkstra/: shortest.py  x.dot
